Support passing JVM arguments to the AOT process (#797)
Fixes #795